--- a/components/App.css
+++ b/components/App.css
@@ -7,10 +7,22 @@
     font-family: Ubuntu, sans-serif;
   }
 
+/*Utilzei medidas como EM para maior responsividade*/
+
  .main {
     /*position: relative;*/
   } 
-
+.Image{
+  width: 30%;
+    margin-bottom: 0;
+    margin-right: 0;
+    z-index: -1;
+    height: auto;
+    background-color: #000;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+}
 
 .sidebar { /*IMPORTANTE, SUBSTITUIR OS VALORES POR em ou rem*/
     height: 90%;
@@ -49,12 +61,23 @@
   display: flex;
 }
 
-.aviso {
-    width: 80%; 
+.ant-menu-item ant-menu-item-selected {
+  border-left: 50px solid #fff;
+  transition: none;
+  transform: none;
+}
+
+.ant-menu-tite-content {
+  transition: none;
+  transform: none;
+}
+
+.sidebar-aviso{
+  width: 80%; 
     height: 55px;
-    top: 24px;
-    margin-left: 10em;
-    margin-top: 20px;
+    /*top: 24px;*/
+    margin-left: 7em;
+    margin-top: 25px;
     /*transform: translateX(-50%);*/
     border-radius: 20px;
     background-color: #4FA1C1;
@@ -64,7 +87,26 @@
     align-items: center;
     justify-content: center;
     color: #FFFFFF;
-    font-size: 20px;
+    font-size: 28px;
+    box-sizing: border-box;
+}
+
+.aviso {
+    width: 80%; 
+    height: 55px;
+    /*top: 24px;*/
+    margin-left: 7em;
+    margin-top: 170px;
+    /*transform: translateX(-50%);*/
+    border-radius: 20px;
+    background-color: #4FA1C1;
+    z-index: 1;
+    position: absolute;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #FFFFFF;
+    font-size: 28px;
     box-sizing: border-box;
 }
 
@@ -148,4 +190,60 @@
   background-color: #fff;
 }
 
+.ant-steps-item-title::after {
+  background-color: #fff;
+}
 /*Fim parte passos*/
+
+.card {
+  position: absolute;
+  margin-top: 180px;
+  margin-left: 125px;
+  width: 480px;
+  padding: 30px;
+  gap: 32px;
+  border-radius: 20px;
+  background-color: #FFFFFF;
+}
+
+.text-card {
+  background-color: #fff;
+  color: #898989;
+}
+
+.img-vector {
+  background-color: #fff;
+  margin-top: 25px;
+  margin-left: 4px;
+}
+
+/*Formulário*/
+
+.card-formulario {
+  margin-left: 1000px;
+  margin-top: 100px;
+  background-color: #000;
+  display: inline-block;
+  z-index: 1;
+  width: 40%;
+   height: 754px;
+}
+
+.titulo{
+  margin-top: 40px;
+    margin-right: 40px;
+    width: 762px;
+    height: 56px;
+    padding: 24px;
+    gap: 32px;
+    border-radius: 20px 20px 0px 0px;
+    background-color: #649FBF;
+    color: #FFFFFF;
+    font-size: 28px;
+    /*display: flex;
+    align-items: center;*/
+}
+
+.principal-form {
+  display: flex;
+}
