--- a/components/App.css
+++ b/components/App.css
@@ -3,7 +3,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    background-color: #f4f4f4;
+    
     font-family: Ubuntu, sans-serif;
   }
 
@@ -11,6 +11,7 @@
 
  .main {
     /*position: relative;*/
+    background-color: #f4f4f4;
   } 
 .Image{
   width: 30%;
@@ -18,7 +19,7 @@
     margin-right: 0;
     z-index: -1;
     height: auto;
-    background-color: #000;
+    background-color: aqua;
     position: absolute;
     right: 0;
     bottom: 0;
@@ -34,7 +35,7 @@
     padding: 0;
     display: flex;
     flex-direction: column;
-    position: fixed;
+    position: absolute; /*Mude para fixed para tornar a sidebar fixa*/
 }
 
 .ant-menu {
@@ -49,6 +50,7 @@
 
 .sidebar .ant-menu-item {
   color: #4FA1C1;
+  background-color: #f4f4f4;
   font-size: 30px;
   width: 32px;
   height: 35px;
@@ -121,6 +123,8 @@
   background-color: #fff;
   padding: 30px;
   border-radius: 20px;
+  margin-left: 8em;
+  margin-top: 10px;
 }
 .icones1 {
   width: 64px; /*ou 64px*/
@@ -144,21 +148,22 @@
   background-color: #fff;
   transform: rotate(0deg);
   /*margin-bottom: 20px;*/
-  margin-left: 100px;
+  margin-left: 210px;
   margin-right: 200px;
   /*margin-right: 20px;*/
-  margin-top: 60px;
+  margin-top: 70px;
   z-index: 1;
   position: absolute;
 }
 
-.div-completa {
+/*.div-completa {
   width: 80%;
   margin-left: 8em;
-  margin-top: 1.5em;
+  margin-top: 10px;
   display: flex;
+  background-color: #f4f4f4;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
-}
+}*/
 
 .ant-steps-item-title {
   background-color: #fff;
@@ -197,13 +202,14 @@
 
 .card {
   position: absolute;
-  margin-top: 180px;
+  margin-top: 190px;
   margin-left: 125px;
   width: 480px;
   padding: 30px;
   gap: 32px;
   border-radius: 20px;
   background-color: #FFFFFF;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
 .text-card {
@@ -220,22 +226,24 @@
 /*Formulário*/
 
 .card-formulario {
-  margin-left: 1000px;
-  margin-top: 100px;
-  background-color: #000;
-  display: inline-block;
-  z-index: 1;
-  width: 40%;
+  margin-left: 780px;
+  margin-right: 20px;
+  margin-top: 190px;
+  background-color: #fff;
+  position: relative;
+  border-radius: 20px;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+  /*display: inline-block;*/
+  z-index: 5;
+  width: 50%;
    height: 754px;
 }
 
-.titulo{
-  margin-top: 40px;
-    margin-right: 40px;
-    width: 762px;
+.titulo{ /*IMPORTANTE fazer a media query do titulo*/
+    
+    width: 100%;
     height: 56px;
     padding: 24px;
-    gap: 32px;
     border-radius: 20px 20px 0px 0px;
     background-color: #649FBF;
     color: #FFFFFF;
@@ -246,4 +254,86 @@
 
 .principal-form {
   display: flex;
+}
+
+.add-funcionario{
+  width: 95%;
+  height: 66px;
+  border: 1px solid var(--Default, #649FBF);
+  color: #649FBF;
+  background-color: transparent;
+  font-size: 16px;
+  margin-top: 40px;
+  margin-left: 20px;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
+
+.buttons {
+margin-top: 10px;
+margin-left: 20px;
+background-color: #fff;
+display: flex;
+}
+
+.btn1 {
+  width: 192px;
+  height: 36px;
+  border-radius: 10px;
+  font-size: 14px;
+  color: #649FBF;
+  border: 1px solid var(--Default, #649FBF);
+  background-color: transparent;
+}
+
+.btn2 {
+  width: 192px;
+  height: 36px;
+  margin-left: 24px;
+  border-radius: 10px;
+  font-size: 14px;
+  border: 1px solid #959595;
+  color: #959595;
+  background-color: transparent;
+}
+
+.ativos {
+  color: #000;
+  background-color: #fff;
+  color: #3A3A3A;
+  font-size: 14px;
+  margin-top: 10px;
+  margin-right: 20px;
+  margin-left: 430px;
+}
+
+/*Funcionário*/
+
+.card-funcionario{
+  width: 550px;
+  height: 92px;
+  padding: 10px, 40px;
+  margin: 24px;
+  border-radius: 10px;
+  background-color: #e4ecf4;
+  position: absolute;
+}
+
+.user-name p-margin{
+  color: blue;
+}
+
+.info {
+  padding: 5px;
+}
+
+.user-details{
+display: flex;
+}
+
+.user-name {
+  font-size: 24px;
 }
